overflow y fix

--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Karla:wght@200&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Karla:wght@200&display=swap");
 
 @supports (font-variation-settings: normal) {
   html {
-    font-family: 'Karla', sans-serif;
+    font-family: "Karla", sans-serif;
   }
 }
 
@@ -23,7 +22,7 @@ p,
 figure,
 picture {
   margin: 0;
-  font-family: 'Karla', sans-serif;
+  font-family: "Karla", sans-serif;
 }
 
 body {
@@ -44,6 +43,13 @@ img,
 picture {
   max-width: 100%;
   display: block;
+}
+a {
+  color: white;
+  text-decoration: none;
+}
+a:hover {
+  color: aquamarine;
 }
 
 /* Variables */
@@ -66,7 +72,6 @@ body {
   display: grid;
   grid-template-rows: auto 1fr auto;
   max-height: 100vh;
-  ;
 }
 
 .container {
@@ -109,7 +114,7 @@ body {
   scrollbar-width: none;
 }
 
-.imagenes>li {
+.imagenes > li {
   scroll-snap-align: start;
 }
 
@@ -134,18 +139,19 @@ body {
   justify-content: space-between;
   padding: 20px;
   padding-top: 35px;
-
 }
 
 .description {
   text-align: center;
   padding: 20px;
+  position: absolute;
+  bottom: 20px;
+  text-align: center;
+  width: 100%;
 }
 
 * {
   font-size: 20px !important;
 }
-
-
 
 /* Inspirado en: https://www.30secondsofcode.org/css/s/horizontal-gallery */
